<resources>
    <string name="app_name">Calculadora</string>
    <string name="mostrar_opciones_deshabilitar">Mostrar opciones deshabilitar</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="division">Division</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="resta">Resta</string>
    <string name="suma">Suma</string>
    <string name="doc">.</string>
    <string name="minus">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="slash">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
</resources>